testsuite/tests/tlks/should_fail/tlks_fail022.stderr

tlks_fail022.hs:11:3: error:
    • Expected a skolem, but k stands for a type: (x, y)
    • In the associated type family declaration for ‘F’
